# mediatimer

./: Cargo.toml  README.md  medialoop_test.sh
icon/: icon.xcf  icon_tui.txt  icon_with_transparancy.xcf
src/: .env  advanced_schedule.rs  areas.rs  autoloop.rs  error.rs  fileselect.rs  landing.rs  loading.rs  loggers.rs  main.rs  mount.rs  proctype.rs  reboot.rs  schedule.rs  styles.rs  timings.rs  web.rs
src/schedule/: export.rs  fileselect.rs  import.rs  timings.rs
