[package]
name = "mediatimer"
version = "0.1.2"
edition = "2024"

[dependencies]
clokwerk = "0.4.0"
crossterm = "0.28.1"
derive_setters = "0.1.6"
dotenvy = "0.15.7"
home = "0.5.9"
indoc = "2.0.5"
ratatui = "0.29.0"
ratatui-explorer = {version = "0.1.4", git ="https://github.com/Considerate-Digital/ratatui-explorer.git"}
#git ="https://github.com/Considerate-Digital/ratatui-explorer.git"}
#path = "/home/alex/ratatui-explorer"}
regex = "1.11.1"
strum = {version = "0.26.3", features = ["derive"] }
tui-textarea = "0.7.0"
whoami = "1.5.2"
wl-clipboard-rs = "0.9.2"

[dev-dependencies]
tempfile = "3.19.1"

[features]
eco = []
standard = []
pro = []
test_schedule=[]
