[package]
name = "mediatimer"
version = "0.1.3"
edition = "2024"

[dependencies]
clokwerk = "0.4.0"
crossterm = "0.28.1"
derive_setters = "0.1.6"
dotenvy = "0.15.7"
home = "0.5.9"
indoc = "2.0.5"
ratatui = "0.29.0"
ratatui-explorer = {version = "0.1.4", git ="https://github.com/Considerate-Digital/ratatui-explorer.git"}
#git ="https://github.com/Considerate-Digital/ratatui-explorer.git"}
#path = "/home/alex/ratatui-explorer"}
regex = "1.11.1"
strum = {version = "0.26.3", features = ["derive"] }
tui-textarea = "0.7.0"
whoami = "1.5.2"
log = "0.4.27"
systemd-journal-logger = "2.2.1"
wl-clipboard-rs = "0.9.2"

[dev-dependencies]
tempfile = "3.19.1"

[features]
test_schedule=[]

[package.metadata.deb]
maintainer = "Alex McCartney <alex@considerate.digital>"
copyright = "2026, Alex McCartney <alex@considerate.digital>"
license-file = ["LICENSE.md", "0"]
depends = "$auto"
priority= "optional"
assets = [
  { source = "target/release/mediatimer", dest = "usr/bin/mediatimer", mode = "755" },
  { source = "README.md", dest = "/usr/share/man/mediatimer/README", mode = "644" },
]
